clusters/aks/ingress-grafana.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: istio-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /g
            pathType: Prefix
            backend:
              service:
                name: flagger-grafana
                port:
                  number: 80
